[package]
name = "ssd1681"
version = "0.1.0"
authors = ["Paul Diaconescu <p@afajl.com>"]
description = "Driver for the SSD1681 e-Paper display (EPD) controller, for use with embedded-hal"
edition = "2018"

documentation = "https://docs.rs/ssd1681"
repository = "https://github.com/afajl/ssd1681"

readme = "README.md"
keywords = ["embedded", "epd", "epaper", "display", "ssd1681", "adafruit"]
categories = ["embedded", "no-std"]

license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
embedded-graphics = { version = "0.6.2", optional = true }

[dev-dependencies]
linux-embedded-hal = "0.3.0"

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
