[package]
name = "ssd1681"
version = "0.1.0"
authors = ["Paul Diaconescu <p@afajl.com>"]
description = "Driver for the SSD1681 e-Paper display (EPD) controller, for use with embedded-hal"
edition = "2018"

documentation = "https://docs.rs/ssd1681"
repository = "https://github.com/afajl/ssd1681"

readme = "README.md"
keywords = ["embedded-hal-driver", "epd", "epaper", "driver", "ssd1681"]
categories = ["embedded", "no-std"]

license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = { version = "1.0.0" }
embedded-graphics = { version = "0.8.1", optional = true }

[dev-dependencies]
[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = "0.4.0"

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]

[profile.release]
lto = true
